--- a/Cap.Web/Areas/Erp/Views/Requisicao/Send.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Send.cshtml
@@ -44,7 +44,7 @@
 
 <hr />
 
-<h3>AÇÕES</h3>
+<h3>Ações</h3>
 
 <div class="container">
     <div class="row top20">
@@ -83,5 +83,12 @@
         </div>
     </div>
 </div>
+
+<hr />
+
+<h3>Ou</h3>
+
+<a href="/Erp/Requisicao/Nova" class="btn btn-primary">Nova requisição</a>
+<a href="/Erp/Requisicao/Index" class="btn btn-primary">Lista de requisições</a>
 
 <div class="modal" id="modal"></div>
