--- a/Cap.Web/Areas/Erp/Views/CentroCusto/DropDown.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CentroCusto/DropDown.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Cap.Web.Common.Bind;
 
-@Html.SelectCentroCusto((int)ViewBag.IdGrupoCusto, (int)ViewBag.IdCentroCusto)
+@Html.SelectCentroCusto((int)ViewBag.IdGrupoCusto, (int)ViewBag.IdCentroCusto, false, (string)ViewBag.idTag)
