--- a/Cap.Web/Areas/Erp/Views/CotacaoCompra/GetCotacaoFornecedor.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoCompra/GetCotacaoFornecedor.cshtml
@@ -97,7 +97,28 @@
         </div>
 
         <div class="row top20">
-            <input type="submit" value="Enviar" class="btn btn-primary" />
+            <input type="button" id="enviarCotacao" value="Enviar" class="btn btn-primary" />
         </div>
     </div>
 }
+
+<script type="text/javascript">
+    $('#enviarCotacao').click(function () {
+        var self = $(this);
+        $.ajax({
+            url: '/Erp/CotacaoCompra/GetCotacaoFornecedor/',
+            type: 'POST',
+            data: self.closest('form').serialize(),
+            success: function (result) {
+                if (result.success == true) {
+                    alert('Cotação enviada com sucesso');
+                } else {
+                    $('#cotacao').html(result);
+                }
+            },
+            error: function (e) {
+                $('#cotacao').html(e);
+            }
+        })
+    })
+</script>
