--- a/Cap.Web/Areas/Erp/Views/CotacaoCompra/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoCompra/Index.cshtml
@@ -5,10 +5,16 @@
     ViewBag.Title = "Incluir cotação";
 }
 
-<h2>Incluir cotação</h2>
+<h2>Cotação negociada</h2>
 
 <hr />
 <h3>Requisição</h3>
+
+<div class="row">
+    <div class="col-md-12 text-right">
+        <a href="/Erp/CotacaoFornecedor/Resumo/@Model.Id" target="_blank">Mapa da cotação</a>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-4">Departamento:<br /><strong>@Model.Departamento.Descricao</strong></div>
