--- a/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Cap.Domain.Models.Admin.SistemaConfig
+﻿@using Cap.Web.Common.Bind;
+@model Cap.Domain.Models.Admin.SistemaConfig
 
 @if (ViewBag.Message != null)
 {
@@ -28,6 +29,20 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequisicaoExibirEntregasPrevistasAteProximosDias, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisicaoExibirEntregasPrevistasAteProximosDias, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MoedaPadrao, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.SelectMoeda(Model.MoedaPadrao, false, "MoedaPadrao")
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.FormaTradicionalDePagamento, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.SelectPgto(Model.FormaTradicionalDePagamento, false, "FormaTradicionalDePagamento")
             </div>
         </div>
 
