--- a/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Index.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Requisições</h2>
-
+<h3>Requisições</h3>
+<div class="top20"></div>
 @{
     Html.RenderAction("EmAndamento");
     Html.RenderAction("Aprovadas");
