valor negociado na compra

--- a/Cap.Web/Areas/Erp/Views/Pesquisa/Pesquisar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Pesquisa/Pesquisar.cshtml
@@ -71,7 +71,7 @@
             </td>
             <td>
                 @*<a href="@Url.Action("Edit", new { id = item.Id })" title="Editar a parcela"><i class="glyphicon glyphicon-edit"></i></a>*@
-                <a href="/Erp/Pedido/Edit/@item.IdPedido" title="Editar a parcela no pedido" target="_blank"><i class="glyphicon glyphicon-edit"></i></a>
+                <a href="/Erp/Pedido/Edit/@item.IdPedido" title="Editar a parcela no pedido"><i class="glyphicon glyphicon-edit"></i></a>
                 <a href="#" data-id="@item.Id" title="Detalhes da parcela" class="details"><i class="glyphicon glyphicon-info-sign"></i></a>
             </td>
         </tr>
