--- a/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Requisicao/Editar.cshtml
@@ -31,7 +31,9 @@
         @Html.HiddenFor(model => model.LogisticaId)
         @Html.HiddenFor(model => model.CompradoEm)
         @Html.HiddenFor(model => model.EntregueEm)
+        @Html.HiddenFor(model => model.EntregaPrevistaPara)
         @Html.HiddenFor(model => model.EntregaConfirmadaPor)
+        @Html.HiddenFor(model => model.ValorNegociado)
 
         <div class="row">
             <div class="col-md-4">
