--- a/Cap.Web/Areas/Erp/Views/CotacaoCompra/GetCotacaoFornecedor.cshtml
+++ b/Cap.Web/Areas/Erp/Views/CotacaoCompra/GetCotacaoFornecedor.cshtml
@@ -95,6 +95,18 @@
             </div>
             <div class="col-md-3"></div>
         </div>
+        <div class="row">
+            <div class="col-md-3">
+                @Html.LabelFor(model => model.Requisicao.EntregaPrevistaPara, htmlAttributes: new { @class= "control-label" })
+                @Html.EditorFor(model => model.Requisicao.EntregaPrevistaPara, new { htmlAttributes = new { @class = "form-control datepicker", required = "required" } })
+                @Html.ValidationMessageFor(model => model.Requisicao.EntregaPrevistaPara,"", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-3">
+                @Html.LabelFor(model => model.Requisicao.ValorNegociado, htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.Requisicao.ValorNegociado, new { htmlAttributes = new { @class = "form-control datepicker", required = "required" } })
+                @Html.ValidationMessageFor(model => model.Requisicao.ValorNegociado, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="row top20">
             <input type="button" id="enviarCotacao" value="Fechar cotação e agendar pagamento" class="btn btn-primary" />
