--- a/Cap.Web/Areas/Erp/Views/Parcela/Edit.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Parcela/Edit.cshtml
@@ -99,7 +99,7 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Gravar" id="alterarparcela" class="btn btn-default" />
+                            <input type="button" value="Gravar" id="alterarparcela" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
