--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -69,6 +69,8 @@
                                 <li><a href="/Erp/Unidade">Unidades</a></li>
                                 <li><a href="/Erp/MatGrupo">Grupos dos materiais</a></li>
                                 <li><a href="/Erp/Material">Materiais</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/Arquivo">Arquivo morto</a></li>
                             </ul>
                         </li>
 
@@ -97,6 +99,8 @@
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/LiberacaoPagamento">Liberação para pagamento</a></li>
                                 <li><a href="/Erp/LiberacaoPagamento/Cancelar">Cancelar liberação para pagamento</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/Boleto">Boletos bancários</a></li>
                             </ul>
                         </li>
 
