--- a/Cap.Web/Areas/Erp/Views/Boleto/GetParcela.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Boleto/GetParcela.cshtml
@@ -56,14 +56,15 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.NN, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.NN, new { htmlAttributes = new { @class = "form-control", autofocus = "autofocus", @required = "required" } })
-                            @Html.ValidationMessageFor(model => model.NN, "", new { @class = "text-danger" })
+                            @*@Html.EditorFor(model => model.NN, new { htmlAttributes = new { @class = "form-control", autofocus = "autofocus", @required = "required" } })*@
+                            <input type="text" maxlength="44" id="nn" name="nn" required placeholder="Números do código de barras" autofocus />
+                            @*@Html.ValidationMessageFor(model => model.NN, "", new { @class = "text-danger" })*@
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="button" value="Gravar" class="btn btn-primary" />
+                            <input type="button" value="Gravar" id="savenn" class="btn btn-primary" />
                         </div>
                     </div>
                 </div>
@@ -88,11 +89,11 @@
                     $('#modal').modal('hide');
                     exibirParcelas();
                 } else {
-                    alert(result.error);
+                    $('#modal').load('/Erp/ModalInfo/Index', { 'msg': result.error });
                 }
             },
             error: function (e) {
-                alert(e.error);
+                $('#modal').load('/Erp/ModalInfo/Index', { 'msg': e.error });
             }
         });
     });
