--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -91,6 +91,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/Erp/Pedido/Create">Novo agendamento</a></li>
                                 <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
+                                <li><a href="/Erp/Grafico">Gráfico de vencimentos</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/Debitos">Relatório de agendamentos futuros</a></li>
                                 <li role="separator" class="divider"></li>
