--- a/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/SistemaConfig/Index.cshtml
@@ -47,6 +47,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.GraficoDias, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.GraficoDias, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.GraficoDias, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="button" value="Gravar" id="gravar-sistema-config" class="btn btn-primary" />
             </div>
