--- a/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
+++ b/Cap.Web/Areas/Erp/Views/Shared/_Layout.cshtml
@@ -91,9 +91,9 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/Erp/Pedido/Create">Novo agendamento</a></li>
                                 <li><a href="/Erp/Pesquisa">Pesquisar agendamentos</a></li>
-                                <li><a href="/Erp/Grafico">Gráfico de vencimentos</a></li>
-                                <li role="separator" class="divider"></li>
+                                <li><a href="/Erp/Boleto">Boletos bancários</a></li>
                                 <li><a href="/Erp/Debitos">Relatório de agendamentos futuros</a></li>
+                                <li><a href="/Erp/Grafico">Gráfico de vencimentos</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="/Erp/Liberacao">Pré liberação de pagamentos</a></li>
                                 <li><a href="/Erp/Liberacao/Cancelar">Cancelar pré liberação</a></li>
@@ -101,7 +101,8 @@
                                 <li><a href="/Erp/LiberacaoPagamento">Liberação para pagamento</a></li>
                                 <li><a href="/Erp/LiberacaoPagamento/Cancelar">Cancelar liberação para pagamento</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="/Erp/Boleto">Boletos bancários</a></li>
+                                <li><a href="/Erp/Caixa">Caixa</a></li>
+                                <li><a href="/Erp/InfoCaixa">Configurações do caixa</a></li>
                             </ul>
                         </li>
 
