--- a/Cap.Web/Areas/Erp/Views/InfoCaixa/Index.cshtml
+++ b/Cap.Web/Areas/Erp/Views/InfoCaixa/Index.cshtml
@@ -18,6 +18,14 @@
         @Html.HiddenFor(model => model.AlteradoEm)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.DataUltimoCaixa, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DataUltimoCaixa, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DataUltimoCaixa, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
             @Html.LabelFor(model => model.DataCaixa, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DataCaixa, new { htmlAttributes = new { @class = "form-control" } })
@@ -26,8 +34,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.DataProximoCaixa, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DataProximoCaixa, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DataProximoCaixa, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" value="Save" class="btn btn-default" />
+                <input type="button" value="Gravar" class="btn btn-primary" />
             </div>
         </div>
     </div>
@@ -37,19 +53,21 @@
 
 <script type="text/javascript">
 
-    $(':input').click(function () {
+    $(':button').click(function () {
         var self = $(this);
         $.ajax({
-            url: '/Erp/InfoCaixa/Save',
+            url: '/Erp/InfoCaixa/Index',
             type: 'POST',
             data: self.closest('form').serialize(),
             success: function (result) {
                 if (result.success == true) {
                     $('#modal').load('/Erp/ModalInfo/Index', { 'msg': 'Informações de caixa atualizadas' });
+                    $('#modal').modal('show');
                 }
             },
             error: function (e) {
                 $('#modal').load('/Erp/ModalInfo/Index', { 'msg': result.error });
+                $('#modal').modal('show');
             }
         })
     });
