--- a/Cap.Web/Areas/Erp/Views/LiberacaoPagamento/ParcelasALiberar.cshtml
+++ b/Cap.Web/Areas/Erp/Views/LiberacaoPagamento/ParcelasALiberar.cshtml
@@ -12,7 +12,7 @@
 <table class="table table-condensed table-striped top20">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.LibMaster)
+            Selecione
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Liberado)
@@ -44,7 +44,7 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td>
+            <td class="text-center">
                 <input type="checkbox" id="selecionado" name="selecionado" value="@item.Id" title="selecione para liberar a parcela" />
             </td>
             <td>
@@ -53,7 +53,7 @@
                 }
                 @Html.DisplayFor(x => preLiberadoPor)
             </td>
-            <td>
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.IdPedido)
             </td>
             <td>
